--- a/_posts/2016-09-16-hello.markdown
+++ b/_posts/2016-09-16-hello.markdown
@@ -1,1 +1,13 @@
+---
+layout:     post
+title:      "Hello, World!"
+subtitle:   "Hello, World!"
+date:       2016-09-16
+author:     "NothingAmazing"
+header-img: "img/post-bg-alitrip.jpg"
+catalog: true
+tags:
+- hello
+---
+
 #Hello, World！
